testsuite/tests/overloadedrecflds/should_fail/overloadedrecfldsfail04.stderr
[1 of 2] Compiling OverloadedRecFldsFail04_A (.hs -> .o)
[2 of 2] Compiling Main             (.hs -> .o)

overloadedrecfldsfail04.hs:9:6: error:
    Ambiguous occurrence ‘I.x’
    It could refer to either the field ‘x’,
                             imported from ‘OverloadedRecFldsFail04_A’ at overloadedrecfldsfail04.hs:6:1-37
                             (and originally defined at OverloadedRecFldsFail04_A.hs:6:16)
                          or the field ‘x’,
                             imported from ‘OverloadedRecFldsFail04_A’ at overloadedrecfldsfail04.hs:6:1-37
                             (and originally defined at OverloadedRecFldsFail04_A.hs:5:16)
